remove fix for forms => break the search form

--- a/assets/front/css/_dev/style-rtl-without-bootstrap.css
+++ b/assets/front/css/_dev/style-rtl-without-bootstrap.css
@@ -3285,7 +3285,7 @@ select {
   display: block;
   line-height: initial;
   padding: 7.5px 15px 7.5px 15px;
-  border: 1px solid #eceeef !important;
+  border: 1px solid #eceeef;
   border-radius: 2px;
   font: inherit;
   font-weight: normal;
@@ -3311,7 +3311,7 @@ input[type=radio] {
   -webkit-appearance: none !important;
   margin: 0;
   padding: 0.5em;
-  position: relative !important;
+  position: relative;
   text-align: center;
   line-height: normal;
   vertical-align: middle;
