--- a/assets/front/css/rtl.css
+++ b/assets/front/css/rtl.css
@@ -6328,7 +6328,7 @@ select {
   display: block;
   line-height: initial;
   padding: 7.5px 15px 7.5px 15px;
-  border: 1px solid #eceeef !important;
+  border: 1px solid #eceeef;
   border-radius: 2px;
   font: inherit;
   font-weight: normal;
@@ -6354,7 +6354,7 @@ input[type=radio] {
   -webkit-appearance: none !important;
   margin: 0;
   padding: 0.5em;
-  position: relative !important;
+  position: relative;
   text-align: center;
   line-height: normal;
   vertical-align: middle;
