--- a/assets/front/scss/0_3_components/_forms.scss
+++ b/assets/front/scss/0_3_components/_forms.scss
@@ -16,7 +16,7 @@ select {
   line-height: initial;
   padding: 7.5px 15px 7.5px 15px;
 
-  border: 1px solid $grey-light!important;
+  border: 1px solid $grey-light;
   border-radius: 2px;
 
   font: inherit;
@@ -44,7 +44,7 @@ input[type=radio] {
   margin: 0;
 
   padding: 0.5em;
-  position: relative!important;
+  position: relative;
   text-align: center;
   line-height: normal;
   vertical-align: middle;
